test/files/run/t7801.check

scala> val g: scala.reflect.internal.SymbolTable = null; import g.abort
g: scala.reflect.internal.SymbolTable = null
import g.abort

scala> class C(val a: Any) extends AnyVal
             ^
       error: value class may not be a member of another class

scala> :quit
